// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocalizedInput should render with pre-existing value should have dropdown with options 1`] = `
<DocumentFragment>
  <div
    class="input-group input-localized input-localized-input"
  >
    <div
      class="dropdown postion-relative lfr-icon-menu open"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="btn btn-monospaced btn-secondary dropdown-toggle"
        data-testid="localized-dropdown-button"
        role="button"
        title=""
        type="button"
      >
        <span
          class="inline-item"
        >
          <svg
            aria-hidden="true"
            class="lexicon-icon lexicon-icon-en-us"
            viewBox="0 0 512 512"
          >
            <use
              xlink:href="#en-us"
            />
          </svg>
        </span>
        <span
          class="btn-section"
        >
          en-US
        </span>
      </button>
      <ul
        class="dropdown-menu d-block"
        role="menu"
      >
        <li
          role="presentation"
        >
          <span
            class="dropdown-item palette-item lfr-icon-item taglib-icon"
            role="menuitem"
            tabindex="0"
            target="_self"
          >
            <span
              class="inline-item inline-item-before"
            >
              <svg
                aria-hidden="true"
                class="lexicon-icon lexicon-icon-en-us"
                viewBox="0 0 512 512"
              >
                <use
                  xlink:href="#en-us"
                />
              </svg>
            </span>
            <span
              class="taglib-text-icon"
            >
              en-US
              <span
                class="ml-1 label label-success"
              >
                translated
              </span>
            </span>
          </span>
        </li>
        <li
          role="presentation"
        >
          <span
            class="dropdown-item palette-item lfr-icon-item taglib-icon"
            role="menuitem"
            tabindex="0"
            target="_self"
          >
            <span
              class="inline-item inline-item-before"
            >
              <svg
                aria-hidden="true"
                class="lexicon-icon lexicon-icon-es-es"
                viewBox="0 0 512 512"
              >
                <use
                  xlink:href="#es-es"
                />
              </svg>
            </span>
            <span
              class="taglib-text-icon"
            >
              es-ES
              <span
                class="ml-1 label label-success"
              >
                translated
              </span>
            </span>
          </span>
        </li>
      </ul>
    </div>
    <div
      class="input-group-item ml-3"
    >
      <input
        class="rounded form-control language-value field form-control-inline form-control"
        data-testid="localized-main-input"
        type="text"
        value="Testing default value"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`LocalizedInput should render with pre-existing value should render 1`] = `
<DocumentFragment>
  <div
    class="input-group input-localized input-localized-input"
  >
    <div
      class="dropdown postion-relative lfr-icon-menu "
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="btn btn-monospaced btn-secondary dropdown-toggle"
        data-testid="localized-dropdown-button"
        role="button"
        title=""
        type="button"
      >
        <span
          class="inline-item"
        >
          <svg
            aria-hidden="true"
            class="lexicon-icon lexicon-icon-en-us"
            viewBox="0 0 512 512"
          >
            <use
              xlink:href="#en-us"
            />
          </svg>
        </span>
        <span
          class="btn-section"
        >
          en-US
        </span>
      </button>
    </div>
    <div
      class="input-group-item ml-3"
    >
      <input
        class="rounded form-control language-value field form-control-inline form-control"
        data-testid="localized-main-input"
        type="text"
        value="Testing default value"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`LocalizedInput with minimal configuration should render 1`] = `
<DocumentFragment>
  <div
    class="input-group input-localized input-localized-input"
  >
    <div
      class="dropdown postion-relative lfr-icon-menu "
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="btn btn-monospaced btn-secondary dropdown-toggle"
        data-testid="localized-dropdown-button"
        role="button"
        title=""
        type="button"
      >
        <span
          class="inline-item"
        >
          <svg
            aria-hidden="true"
            class="lexicon-icon lexicon-icon-en-us"
            viewBox="0 0 512 512"
          >
            <use
              xlink:href="#en-us"
            />
          </svg>
        </span>
        <span
          class="btn-section"
        >
          en-US
        </span>
      </button>
    </div>
    <div
      class="input-group-item ml-3"
    >
      <input
        class="rounded form-control language-value field form-control-inline form-control"
        data-testid="localized-main-input"
        type="text"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;
